CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.8.5-dev


CruiseControl Release Notes - 2.8.4

general
======================
* Fix binaryrelease/cruisecontrol.sh startup script to convert JETTY_LOGS variable when run under cygwin (CC-983). Patch by Mark Bretl.
* build script cleanups.

build loop
======================
* Add a JMX operation to retrieve build logs (CC-908). Adapted from patch by Ivan "Rambius" Ivanov. Tested by Antoine Levy Lambert.
* Add FileResolver/ResolverUser to detect and re-read changed property files (CC-952). Patch by Daniel Tihelka. 
* BuildOutputLogger with multiple builds interfere with each other with multiple threads (CC-911). Patch by Grzegorz Olędzki. 
  Additional changes to support 'liveOutput' (visible in Dashboard) and 'showProgress' (visible in JSP) from all builders. See CC-911 for details.
* Add a JMX operation that passes additional properties to a build (CC-909). Based on Patch by Ivan "Rambius" Ivanov and Antoine Levy Lambert.
* Add parameter names and descriptions to the jmx operations (CC-1000). Patch by Antonio Gonzalez.

AntBuilder
----------------------
* Fix possible build failure due to NPE in AntOutputLogger (CC-913). Patch by Ivan "Rambius" Ivanov.

CVS
----------------------
* CVS modification check extremely slow on branches (CC-548). Now always adds -N and -S to cvs log command. Patch by Jason Day. Tested by Sanjay Madhavan.

CMSynergyBaselinePublisher
----------------------
* Allow property resolution in build attribute (CC-973).

EmailPublisher
----------------------
* Add support for sending build notification emails without requiring an SMTP relay server (CC-981). Patch by Kent R. Spillner.
* Add default buildresultsurl attribute on email publishers (CC-982). Patch by Kent R. Spillner.

Harvest
----------------------